<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_logo"
        />

    <EditText style = "@style/text_login"
        android:id="@+id/text_login_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/message_username"
        android:layout_below="@+id/image_logo"
        android:layout_centerHorizontal="true" />

    <EditText style = "@style/text_login"
        android:id="@+id/text_user_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:inputType="textPassword"
        android:hint="@string/message_password"
        android:layout_below="@+id/text_login_username"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/txtAccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/action_access"
        android:textColor="@color/core_orange"
        android:layout_above="@+id/txtRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="29dp"
        android:clickable="true"
        android:onClick="loginText"/>

    <Button
        android:theme="@style/button_generic"
        android:id="@+id/button_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_login"
        android:layout_above="@+id/txtAccess"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="29dp"
        android:onClick="loginButton"/>

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/action_register"
        android:textColor="@color/core_orange"
        android:layout_marginBottom="46dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:onClick="loginText" />

</RelativeLayout>