<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="epsilon.whygosoloapplication.activities.RegisterActivity">

    <RelativeLayout android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_logo" />

        <EditText style = "@style/text_login"
            android:id="@+id/text_user_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/message_username"
            android:layout_below="@+id/image_logo"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="10dp"
            android:maxLength="50" />

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:id="@+id/progress_unique_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/text_user_username"
            android:layout_alignRight="@+id/text_user_username"
            android:layout_alignEnd="@+id/text_user_username"
            android:indeterminate="true"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/text_user_names"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignWithParentIfMissing="false"
            android:layout_below="@+id/text_user_username"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:orientation="horizontal">
            <EditText style = "@style/text_login"
                android:id="@+id/text_user_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/hint_first_name"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:inputType="textPersonName"
                android:maxLength="100"
                android:layout_weight="1"
                android:layout_marginRight="10dp"/>
            <EditText style = "@style/text_login"
                android:id="@+id/text_user_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/hint_last_name"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:inputType="textPersonName"
                android:maxLength="100"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>

        <EditText style = "@style/text_login"
            android:id="@+id/text_user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/hint_email"
            android:layout_alignWithParentIfMissing="false"
            android:layout_below="@+id/text_user_names"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:inputType="textEmailAddress"
            android:maxLength="255" />

        <EditText style = "@style/text_login"
            android:id="@+id/text_user_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="textPassword"
            android:hint="@string/message_password"
            android:layout_below="@+id/text_user_email"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:maxLength="42" />

        <EditText style = "@style/text_login"
            android:id="@+id/text_user_validate_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_user_password"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:singleLine="true"
            android:inputType="textPassword"
            android:hint="@string/hint_reenter_password"
            android:maxLength="42" />

        <EditText style = "@style/text_login"
            android:id="@+id/text_user_biography"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/text_user_validate_password"
            android:layout_marginTop="5dp"
            android:singleLine="false"
            android:hint="@string/hint_biography"
            android:maxLength="255" />

        <Button
            android:theme="@style/button_generic"
            android:id="@+id/button_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_register"
            android:onClick="registerButton"
            android:layout_below="@+id/text_user_biography"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
</ScrollView>