<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view_events"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:focusable="true"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardElevation="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="50"
        android:padding="8dp"
        android:background="@color/colour_primary">

        <TextView
            android:id="@+id/text_event_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_event"
            android:textSize="32sp"
            android:textColor="@color/generic_white" />

        <ImageView
            android:id="@+id/image_event"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_below="@+id/text_event_name"
            android:src="@drawable/ic_tab_profile"
            android:contentDescription="@string/message_picture_event" />

        <TextView
            android:id="@+id/text_event_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message_event_formatted"
            android:textColor="@color/generic_white"
            android:textSize="18sp"
            android:layout_below="@+id/text_event_name"
            android:layout_toRightOf="@+id/image_event"
            android:layout_toEndOf="@+id/image_event" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_sponsored"
            android:id="@+id/text_sponsored"
            android:background="@color/core_orange"
            android:textColor="@color/generic_white"
            android:textSize="18sp"
            android:visibility="invisible"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

</android.support.v7.widget.CardView>
