<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_coordinate_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.CreateEventActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:id="@+id/background_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/button_profile_picture"
                    android:layout_width="fill_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/ic_button_profile_add"
                    android:onClick="onProfileButtonClick"
                    android:background="@color/secondary_gray_light"
                    android:contentDescription="@string/title_create_event"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView style="@style/text_title"
                    android:id="@+id/title_create_event"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_create_event"
                    android:layout_below="@+id/button_profile_picture"/>

                <EditText
                    android:id="@+id/text_event_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title_create_event"
                    android:hint="@string/message_event_name"
                    android:singleLine="true"
                    android:nextFocusDown="@+id/text_location_name"
                    android:layout_toStartOf="@+id/button_profile_picture"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginLeft="@dimen/text_horizontal_margin"
                    android:layout_marginRight="@dimen/text_horizontal_margin"/>

                <EditText
                    android:id="@+id/text_location_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/message_event_location"
                    android:singleLine="true"
                    android:nextFocusDown="@+id/spinner_category"
                    android:layout_below="@+id/text_event_name"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="@dimen/text_horizontal_margin"
                    android:layout_marginRight="@dimen/text_horizontal_margin"/>

                <Spinner
                    android:id="@+id/spinner_category"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_below="@+id/text_location_name"
                    android:nextFocusDown="@+id/text_from_date"
                    android:layout_toStartOf="@+id/button_profile_picture"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginLeft="@dimen/text_horizontal_margin"
                    android:layout_marginRight="@dimen/text_horizontal_margin"/>

                <TextView
                    android:id="@+id/text_from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/spinner_category"
                    android:textSize="@dimen/large_text"
                    android:text="@string/message_event_from"
                    android:layout_marginLeft="@dimen/text_horizontal_margin"
                    android:layout_marginRight="@dimen/text_horizontal_margin"/>

                <LinearLayout
                    android:id="@+id/view_from_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_from"
                    android:layout_alignRight="@+id/spinner_category"
                    android:layout_alignEnd="@+id/spinner_category"
                    android:orientation="horizontal"
                    android:layout_marginLeft="@dimen/text_horizontal_margin"
                    android:layout_marginRight="@dimen/text_horizontal_margin">
                    <EditText
                        android:id="@+id/text_from_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="date"
                        android:singleLine="true"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:clickable="true"
                        android:onClick="onSetFromDate"
                        android:hint="@string/message_event_from_date"
                        android:nextFocusRight="@+id/text_from_time"
                        android:nextFocusDown="@+id/text_to_date"
                        android:layout_weight="10"/>

                    <EditText
                        android:id="@+id/text_from_time"
                        android:layout_width="128dp"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:inputType="time"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:clickable="true"
                        android:onClick="onSetFromTime"
                        android:hint="@string/message_event_from_time"
                        android:nextFocusDown="@+id/text_to_time"
                        android:layout_weight="1"
                        android:layout_marginLeft="@dimen/text_horizontal_margin"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/text_to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/view_from_date"
                    android:textSize="@dimen/large_text"
                    android:text="@string/message_event_to"
                    android:layout_marginLeft="@dimen/text_horizontal_margin"
                    android:layout_marginRight="@dimen/text_horizontal_margin"/>

                <LinearLayout
                    android:id="@+id/view_to_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_to"
                    android:layout_alignRight="@+id/spinner_category"
                    android:layout_alignEnd="@+id/spinner_category"
                    android:orientation="horizontal"
                    android:layout_marginLeft="@dimen/text_horizontal_margin"
                    android:layout_marginRight="@dimen/text_horizontal_margin">

                <EditText
                    android:id="@+id/text_to_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="date"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:clickable="true"
                    android:onClick="onSetToDate"
                    android:hint="@string/message_event_to_date"
                    android:nextFocusRight="@+id/text_to_time"
                    android:nextFocusDown="@+id/text_box_description"
                    android:layout_weight="10"/>

                <EditText
                    android:id="@+id/text_to_time"
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="time"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:clickable="true"
                    android:onClick="onSetToTime"
                    android:hint="@string/message_event_to_time"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/text_horizontal_margin"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/text_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/view_to_date"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/message_event_description"
                    android:textSize="@dimen/large_text"
                    android:layout_marginLeft="@dimen/text_horizontal_margin"
                    android:layout_marginRight="@dimen/text_horizontal_margin"/>

                <EditText style="@style/text_search_box"
                    android:id="@+id/text_box_description"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_description"
                    android:inputType="textMultiLine"
                    android:layout_marginLeft="@dimen/text_horizontal_margin"
                    android:layout_marginRight="@dimen/text_horizontal_margin"/>

            </RelativeLayout>

            <Button
                android:theme="@style/button_generic"
                android:id="@+id/button_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/message_event_create"
                android:onClick="onCreateEvent"/>

        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
