<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_logo"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/lbl_reset_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/message_recover_email_1"
        android:textColor="@color/secondary_gray_light"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/image_logo"
        android:layout_centerHorizontal="true" />

    <EditText style = "@style/text_login"
        android:id="@+id/text_user_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:layout_below="@+id/lbl_reset_1"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/lbl_reset_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/message_recover_email_2"
        android:textColor="@color/secondary_gray_light"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/text_user_email"
        android:layout_alignRight="@+id/lbl_reset_1"
        android:layout_alignEnd="@+id/lbl_reset_1"
        android:layout_alignLeft="@+id/lbl_reset_1"
        android:layout_alignStart="@+id/lbl_reset_1" />

    <Button
        android:theme="@style/button_generic"
        android:id="@+id/button_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Done"
        android:layout_below="@+id/lbl_reset_2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:onClick="recPWButton"/>
</RelativeLayout>